syntax = "proto3";
package il.v1;

import "gogoproto/gogo.proto";
import "il/v1/il.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";


option go_package = "github.com/peggyjv/sommelier/x/il/types";

// Query defines a gRPC query service for the impermanent loss module.
service Query {
    rpc Stoploss(QueryStoplossRequest) returns (QueryStoplossResponse) {
        option (google.api.http).get = "/il/v1/stoploss_positions/{address}/{uniswap_pair}";
    }
    rpc StoplossPositions(QueryStoplossPositionsRequest) returns (QueryStoplossPositionsResponse) {
        option (google.api.http).get = "/il/v1/stoploss_positions/{address}";
    }
    rpc Parameters(QueryParametersRequest) returns (QueryParametersResponse) {
        option (google.api.http).get = "/il/v1/parameters";
    }
}

message QueryStoplossRequest {
    // account address that owns the stoploss position
    string address = 1;
    // uniswap pair of the position
    string uniswap_pair = 2;
}
message QueryStoplossResponse {
    // stoploss position for the given address and pair.
    Stoploss stoploss = 1 [(gogoproto.nullable) = false];
}

message QueryStoplossPositionsRequest {
    // account address that owns the stoploss positions
    string address = 1;
    // pagination request
    cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryStoplossPositionsResponse {
    // set of possitions owned by the given address
    repeated Stoploss stoploss_positions = 1 [(gogoproto.nullable) = false];
    // pagination response
    cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryParametersRequest is an empty request to query for the impermanent loss params 
message QueryParametersRequest {}

// QueryParametersResponse 
message QueryParametersResponse {
    // impermanent loss parameters
    Params params = 1 [(gogoproto.nullable) = false];
}
